Ajout d'un \cite dans le main pour pouvoir compiler

--- a/main.tex
+++ b/main.tex
@@ -85,7 +85,7 @@
 \vfill
 %%%%%%%%%%%% DEBUT DEUXIEME LIGNE %%%%%%%%%%%%%%%%%%
 
-\TwoBoxes{.48}{Titre1}{Blah}{.48}{Titre2}{Bluh}{15cm}
+\TwoBoxes{.48}{Titre1}{Blah}{.48}{Titre2}{\cite{ref_figure}}{15cm}
 \vfill
 
 \small{References}\\
